Zero streaks in Glare node #50736

Closed
opened 2017-02-20 18:16:24 +01:00 by Serge Lyatin · 6 comments

System Information
Win7 32 bit

Blender Version
Broken: 2.78a, b

Exact steps for others to reproduce the error

  • In default scene enable Composition nodes
  • Add Glare node
  • Switch to Simple Star and disable 45 degree rotation
  • Switch back to Streaks and look at zero number of them

Please, do not remove option "1" because sometimes using 1 streak is very neat. And this was hacky thing to achieve this.
Zero_streaks.blend

**System Information** Win7 32 bit **Blender Version** Broken: 2.78a, b **Exact steps for others to reproduce the error** - In default scene enable Composition nodes - Add *Glare* node - Switch to *Simple Star* and disable *45* degree rotation - Switch back to *Streaks* and look at zero number of them Please, do not remove option "1" because sometimes using 1 streak is very neat. And this was hacky thing to achieve this. [Zero_streaks.blend](https://archive.blender.org/developer/F491368/Zero_streaks.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SergeL

Added subscriber: @SergeL

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2017-02-23 09:47:38 +01:00

Grrrr… using same var for two different things… grrrrrrrrr… developers should know better…

Thanks for the report, will fix that mess, should even be able to keep forward compatibility. :)

Grrrr… using same var for two different things… grrrrrrrrr… developers should know better… Thanks for the report, will fix that mess, should even be able to keep forward compatibility. :)

This issue was referenced by 9dd194716b

This issue was referenced by 9dd194716b0f43fa02ae6cd32ada556d8d622390

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50736
No description provided.